--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "Test crud project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate:up": "node-pg-migrate up",
+    "migrate:down": "node-pg-migrate down",
+    "migrate:redo": "node-pg-migrate redo",
+    "migrate:create": "node-pg-migrate create"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "node-pg-migrate": "^6.2.2",
+    "pg": "^8.11.3",
     "uuid": "^9.0.1"
   },
-  "type":"module"
+  "type": "module"
 }
